<resources>
    <string name="app_name">Code Briefcase</string>
    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="title_activity_create_edit">CreateEditActivity</string>
    <string name="add_a_snippet">Add a snippet</string>
    <string name="edit_a_snippet">Edit a snippet</string>
    <string name="hint_short_description">Short description</string>
    <string name="hint_tag">Tag</string>
    <string name="hint_code">Code</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="hint_tag_secondary">Secondary tag</string>
    <string name="delete">Delete</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="starred">Starred</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_sub_filter">Filter</string>
    <string name="nav_add">Add</string>
    <string name="pref_theme_key">theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_dialog_title">Choose a theme</string>
    <string name="pref_theme_default">default</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="webservice_label">Code Briefcase is running</string>
    <string name="webservice_started">webservice_started</string>
    <string name="nav_web">Web</string>
    <string name="updated">Updated</string>
    <string name="unable_to_update">Unable to update</string>
    <string name="unable_to_delete">Unable to delete the item</string>
    <string name="unable_to_retrieve">Unable to retrieve the item</string>
    <string name="delete_the_item">Delete the item?</string>
    <string name="cancel">Cancel</string>
    <string name="connected_to_ip">Connected to %1$s</string>
    <string name="to_use_the_web">To use the web interface, open a web browser to %1$s
        on the same network.</string>
    <string name="to_enable_the_web">To enable the web interface, connect to a Wi-Fi network.</string>
    <string name="web">Web</string>
    <string name="access_from">Access from %1$s</string>
    <string name="wants_to_connect">%1$s wants to connect to Code Briefcase</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pref_offline_mode_title">Offline mode</string>
    <string name="pref_offline_mode_key">offline_mode</string>
    <string name="offline_mode_is_on">Offline mode is enabled</string>
    <string name="disable_offline_mode">Disable offline mode?</string>
    <string name="disconnect">Disconnect</string>
    <string name="Filter">Filter</string>
    <string name="nav_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="code_briefcase"><![CDATA[<b>Code Briefcase</b><br>Version %s]]></string>
    <string name="view_the_source">View the source code</string>
    <string name="third_party_licenses">
        <![CDATA[
        <h1>NanoHttpd</h1>
        <p>Copyright (c) 2012-2013 by Paul S. Hawke, 2001,2005-2013 by Jarno Elonen, 2010 by Konstantinos Togias
All rights reserved.</p>

<p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>

<p>* Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.</p>

<p>* Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.</p>

<p>* Neither the name of the NanoHttpd organization nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.</p>
<p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>

        <h1>Apache Commons Lang</h1>
        <p>Copyright 2001-2016 The Apache Software Foundation. All rights reserved.</p>
<p>Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at</p>

    <p>http://www.apache.org/licenses/LICENSE-2.0</p>

<p>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</p>

        <h1>SelectionBuilder.java</h1>

        <p>Copyright 2014 Google Inc. All rights reserved.</p>
<p>Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at</p>

    <p>http://www.apache.org/licenses/LICENSE-2.0</p>

<p>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</p>
        ]]>
    </string>
    <string name="licenses">View licenses</string>
    <string name="title_activity_licenses">Licenses</string>

</resources>
